Fix broken paths.

--- a/views/youtube-search.html
+++ b/views/youtube-search.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" style="text/css" href="../views/youtube-search.css">
-		<link rel="stylesheet" style="text/css" href="../bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" style="text/css" href="../assets/css/youtube-search.css">
+		<link rel="stylesheet" style="text/css" href="../assets/css/bootstrap.min.css">
 		<title>Asuldian's Website</title>
-		<script src="auth.js"></script>
+		<script src="../controllers/auth.js"></script>
 		<script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<script type="text/javascript">
