--- a/views/google+.html
+++ b/views/google+.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" style="text/css" href="../views/google+.css">
-		<link rel="stylesheet" style="text/css" href="../bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" style="text/css" href="../assets/css/google+.css">
+		<link rel="stylesheet" style="text/css" href="../assets/css/bootstrap.min.css">
 		<title>Asuldian's Website</title>
-		<script src="google+.js"></script>
+		<script src="../controllers/google+.js"></script>
 	</head>
 	<body>
 		<div id="top-title">
