--- a/views/incremental.html
+++ b/views/incremental.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" style="text/css" href="../views/incremental.css">
-		<link rel="stylesheet" style="text/css" href="../bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" style="text/css" href="../views/base.css">
+		<link rel="stylesheet" style="text/css" href="../assets/css/incremental.css">
+		<link rel="stylesheet" style="text/css" href="../assets/css/bootstrap.min.css">
+		<link rel="stylesheet" style="text/css" href="../assets/css/base.css">
 		<title>Asuldian's Incremental Game</title>
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-		<script src="../bootstrap/js/bootstrap.min.js"></script>
+		<script src="../assets/js/bootstrap.min.js"></script>
 		<script type="text/javascript">
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-57535571-1']);
@@ -61,6 +61,6 @@
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript" src="incremental.js"></script>
+		<script type="text/javascript" src="../controllers/incremental.js"></script>
 	</body>
 </html>
