Fix navbar on every pages.

--- a/views/google+.html
+++ b/views/google+.html
@@ -16,6 +16,7 @@
 					  <li><a href="../index.html">Home</a></li>
 					  <li><a href="youtube-search.html">Youtube search</a></li>
 					  <li class ="active"><a href="google+.html">Google +</a></li>
+					  <li><a href="incremental.html">The game</a></li>
 					</ul>
 				</div>
 			</div>
