--- a/views/youtube-search.html
+++ b/views/youtube-search.html
@@ -51,6 +51,7 @@
 					  <li><a href="../index.html">Home</a></li>
 					  <li class="active"><a href="youtube-search.html">Youtube search</a></li>
 					  <li><a href="google+.html">Google +</a></li>
+					  <li><a href="incremental.html">The game</a></li>
 					</ul>
 				</div>
 			</div>
