Fix views and load/save functions from game.

--- a/views/youtube-search.html
+++ b/views/youtube-search.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" style="text/css" href="../assets/css/youtube-search.css">
 		<link rel="stylesheet" style="text/css" href="../assets/css/bootstrap.min.css">
+		<link rel="stylesheet" style="text/css" href="../assets/css/base.css">
 		<title>Asuldian's Website</title>
 		<script src="../controllers/auth.js"></script>
 		<script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
@@ -44,7 +45,7 @@
 	</head>
 	<body>
 		<div id="top-title">
-			<div class="navbar navbar-static-top">
+			<div class="navbar navbar-static-top navbar-inverse">
 				<div class="navbar-inner">
 					<a class="brand" href="../index.html">Asuldian</a>
 					<ul class="nav">
@@ -56,7 +57,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="page-content" class="navbar-text">
+		<div id="page-content" class="navbar-text mlm">
 			<legend>Search video</legend>
 			<form action="#">
 				<select name="items" class="select-items" >
