--- a/views/google+.html
+++ b/views/google+.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div id="top-title">
-			<div class="navbar navbar-static-top">
+			<div class="navbar navbar-static-top navbar-inverse">
 				<div class="navbar-inner">
 					<a class="brand" href="../index.html">Asuldian</a>
 					<ul class="nav">
