--- a/views/incremental.html
+++ b/views/incremental.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<div id="top-title">
-			<div class="navbar navbar-static-top">
+			<div class="navbar navbar-static-top navbar-inverse">
 				<div class="navbar-inner">
 					<a class="brand" href="../index.html">Asuldian</a>
 					<ul class="nav">
@@ -44,7 +44,7 @@
 				<div>
 					<span class="point-name"></span> per second: <span id="points-per-second">0</span></br>
 				</div>			
-				<button type="button" id="increment" class="btn btn-default">Get <span class="point-name"></span></button></br>
+				<button type="button" id="increment" class="btn btn-default">Get <span class="point-name"><button type="button" id="upgrade-increment" class="btn btn-succes">Get <span class="point-name"></span></button></br>
 				<div>
 					<button type="button" id="save" class="btn btn-success">SAVE GAME</button>
 					<button type="button" id="load" class="btn btn-success">LOAD GAME</button>
@@ -56,7 +56,7 @@
 						<button type="button" id="buy-cursor" class="btn btn-primary">Buy 1 cursor: <span id="cursorCost">10</span></button>
 						<button type="button" id="up-cursor" class="btn btn-warning">Upgrade cursor: <span id="cursorUpCost">100</span></button></br>
 						<div class="rfloat cursor-number mtm"><span id="cursors">0</span> cursors owned.</div></br>
-						<div class="rfloat cursor-number">Cursor level: <span id="cursorsUpLvl">1</span></div>
+						<div class="rfloat cursor-number">Cursor level: <span id="cursorUpLvl">1</span></div>
 					</div>
 				</div>
 			</div>
