Fix saving/load process, now fully working.

--- a/views/incremental.html
+++ b/views/incremental.html
@@ -43,8 +43,11 @@
 				</div>
 				<div>
 					<span class="point-name"></span> per second: <span id="points-per-second">0</span></br>
-				</div>			
-				<button type="button" id="increment" class="btn btn-default">Get <span class="point-name"><button type="button" id="upgrade-increment" class="btn btn-succes">Get <span class="point-name"></span></button></br>
+				</div>
+				<div>				
+					<button type="button" id="increment" class="btn btn-default">Get <span class="point-name"></span></button>
+					<button type="button" id="upgrade-increment" class="btn btn-succes">Upgrade click</button>
+				</div>
 				<div>
 					<button type="button" id="save" class="btn btn-success">SAVE GAME</button>
 					<button type="button" id="load" class="btn btn-success">LOAD GAME</button>
