Fix incremental game. Testing new google API.

--- a/views/incremental.html
+++ b/views/incremental.html
@@ -44,9 +44,13 @@
 				<div>
 					<span class="point-name"></span> per second: <span id="points-per-second">0</span></br>
 				</div>
+                <div>
+                    Click level : <span id="click-level">1</span></br>
+                    Click value : <span id="click-value">1</span></br>
+                </div>
 				<div>				
 					<button type="button" id="increment" class="btn btn-default">Get <span class="point-name"></span></button>
-					<button type="button" id="upgrade-increment" class="btn btn-succes">Upgrade click</button>
+					<button type="button" id="upgrade-increment" class="btn btn-succes">Upgrade click : <span id="click-up-cost">200</span></button>
 				</div>
 				<div>
 					<button type="button" id="save" class="btn btn-success">SAVE GAME</button>
